--- a/index.html
+++ b/index.html
@@ -7,6 +7,32 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header class="header">
+        <div class="container">
+            <div class="menu">
+                <div class="logo menu__logo">
+                    Repair Design Project
+                </div>
+                <!-- /.logo -->
+                <nav class="nav nav__menu">
+                    <a href="#" class="nav__link">Главная</a>
+                    <a href="#" class="nav__link">Проекты</a>
+                    <a href="#" class="nav__link">Замер</a>
+                    <a href="#" class="nav__link">Команда</a>
+                    <a href="#" class="nav__link">Отзывы</a>
+                    <a href="#" class="nav__link">Контакты</a> 
+                </nav>
+                <div class="contacts menu__contacts">
+                    <a href="tel:+79997683299" class="phone contacts__phone">+7 (999) 768-32-99</a>
+                    <button class="button contacts__button button--primary">Заказать звонок</button>
+                </div>
+                <!-- /.contacts menu__contacts -->
+                
+            </div>
+            <!-- /.menu -->
+        </div>
+        <!-- /.container -->
+    </header>
+
 </body>
 </html>
